[package]
name = "nuna"
version = "0.1.0"
edition = "2024"

[dependencies]
kanata-interception = "0.3.0"
log = "0.4.8"
anyhow = "1"
simplelog = "0.12.0"
windows = { version = "0.61.3", features = [
    "Win32_UI_Input_KeyboardAndMouse",
] }
tray-icon = "0.21.2"
crossbeam-channel = "0.5.15"
image = { version = "0.25", default-features = false, features = ["ico"] }
tao = "0.34"
single-instance = "0.3.3"  # 用于单实例检查


[profile.release]
opt-level = "z"
lto = "fat"
panic = "abort"
codegen-units = 1
